Revision history for Test-Harness

        - Add harness_class argument to TAP::Harness::Env (Leon Timmermans)

3.30    2013-11-12
        - Fix missing parent prereq in META.{yml,json} and NotBuild.PL
          (Dagfinn Ilmari Mannsåker, #89650)
        - Respect PERL5LIB in tainting source handler test (Dagfinn Ilmari Mannsåker, 
          Leon Timmermans)
        - Use base instead of parent:

          This dist is used for testing all other modules, so it should avoid
          having any non-core prerequisites.  Having parent as a prereq leads to a
          circular dependency of parent -> Test::More -> Test::Harness. (Graham Knop)
        - Various POD fixes (Nathan Gary Glenn)
        - Don't localize all of %ENV in harness.t (Craig Berry)
        - Give TAP::Harness::Beyond a unique NAME (Leon Timmermans)

3.29    2013-08-10
        - Get rid of use vars in favor of our in all modules (Leon Timmermans)
          and tests (Karen Etheridge)
        - Added use warnings to all modules (Leon Timmermans) and tests (Karen
          Etheridge)
        - Use parent instead of @ISA in all modules (Leon Timmermans) and
          tests (Karen Etheridge)
        - Fix failing test on VMS (Craig Berry)
        - Improve error message on loading failure (Leon Timmermans, #77730)
        - Use Text::ParseWords, deprecate TAP::Parser::Utils

3.28    2013-05-02
        - Bugfix: Fix taint failures on Windows (Jan Dubois)

3.27    2013-04-30
        - Dramatically reduce memory usage (Nick Clark, RT #84939)
        - Store test_num (in Grammar.pm) as a number instead of a string.
          Reduces memory usage (Nick Clark, RT #84939)
        - PERL5LIB is always propogated to a test's @INC, even with taint more
          (Schwern, RT #84377)
        - restore "always add -w to switches" behavior

3.26    2013-01-16
        - Renamed env.opts.t to env_opts.t (for VMS)
        - Skipped some TAP::Formatter::HTML tests due to this bug: #82738

3.26    2012-06-05