@@ -1,6 +1,7 @@
 Revision history for Test-Harness
 
         - Add harness_class argument to TAP::Harness::Env (Leon Timmermans)
+        - Make prove respect environmental variables #28 (Leon Timmermans)
 
 3.30    2013-11-12
         - Fix missing parent prereq in META.{yml,json} and NotBuild.PL
